Navbar setup complete

--- a/1. UI/index.html
+++ b/1. UI/index.html
@@ -19,21 +19,28 @@
           href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet"
         />
-        <title>RESTURANT APP</title>
     </head>
-    <nav>
-        <div class="nav-left">
-            RESTURANT
-        </div>
-        <div class="nav-right">HELLO</div>
-    </nav>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="Order-Taking-Screen ">
-           
+        <div class="Order-Taking-Screen">
+            <div class="Rectangle-614">
+                <img src="img/component-35-1.svg" class="Component-35-1">
+                    <div class="Rectangle-624">
+                        <img src="img/outline-notifications-24px.svg" class="outline-notifications-24px">
+                    </div>
+                    <div class="Rectangle-623">
+                        <span class="Adam-Lane"> Adam Lane </span>
+                        <img src="img/cesar-rincon-608059-unsplash.png"
+                            srcset="img/cesar-rincon-608059-unsplash@2x.png 2x,
+                                    img/cesar-rincon-608059-unsplash@3x.png 3x"
+                            class="cesar-rincon-608059-unsplash">
+
+                    </div>
+
+            </div>
         </div>
-        
+
     </body>
 </html>
